crates/tuna/tests/parser/fail/self-block-param.som
"test:
fail-message:
  - contains: define
  - contains: self
"

SelfBlockParam = (
  test = (
    [ :self | 42 ] value.
  )
)
